<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingBottom="18dp"
    android:background="@drawable/bg7"
    tools:context="com.testworkshop.projectone.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_marginStart="70dp"
                android:src="@drawable/logo" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:id="@+id/et1"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:drawablePadding="12dp"
                android:hint="@string/username"
                android:textColorHint="#fff"
                android:drawableStart="@drawable/user"/>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:background="#fff" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:id="@+id/et2"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:textColorHint="#fff"
                android:drawableStart="@drawable/lock"/>
            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:background="#fff" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/remember_me"
                android:textColor="#fff"
                android:layout_marginStart="32dp"
                android:buttonTint="#fff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:layout_marginStart="200dp"
                android:layout_marginTop="10dp"
                android:clickable="true"/>
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:id="@+id/btn1"
                android:background="@drawable/round_btn"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="#154360"
                android:padding="10dp"
                android:layout_marginTop="16dp"
                />

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:id="@+id/btn2"
                android:background="@drawable/round_btn"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="#154360"
                android:padding="10dp"
                android:layout_marginTop="2dp"
                />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
