<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingBottom="18dp"
    android:background="@drawable/bg6"
    tools:context="com.testworkshop.projectone.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/logo"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:id="@+id/et5"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:drawablePadding="12dp"
                android:hint="@string/username"
                android:textColorHint="#fff"
                android:drawableStart="@drawable/user"/>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:background="#fff" />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:id="@+id/et6"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:drawablePadding="12dp"
                android:hint="@string/enter_email_id"
                android:textColorHint="#fff"
                android:drawableStart="@drawable/email"/>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:background="#fff" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:id="@+id/et7"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:textColorHint="#fff"
                android:drawableStart="@drawable/lock"/>
            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:background="#fff" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:id="@+id/et8"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:drawablePadding="12dp"
                android:hint="@string/confirm_password"
                android:textColorHint="#fff"
                android:drawableStart="@drawable/conpass"/>
            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:background="#fff" />



            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:id="@+id/btn3"
                android:background="@drawable/round_btn"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="#154360"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
